# golinks

./: README.md  pyproject.toml
chrome-extension/: manifest.json  redirect.js
src/: app.py
src/static/: cp.html
